<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/setting"
        android:textSize="25sp"
        android:onClick="mOnClick"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btReboot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/reboot"
        android:textSize="25sp"
        android:onClick="mOnClick"
        android:layout_marginHorizontal="10dp"
        />

    <Button
        android:id="@+id/btShutdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/program_shutdown"
        android:textSize="25sp"
        android:onClick="mOnClick"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/tvVersionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{buildConfig.VERSION_NAME}"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        />


    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="200dp"
        />


</LinearLayout>