<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reservation_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/_2383C6">

    <View
        android:id="@+id/vCenterLine"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginStart="842dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btSetting"
        app:layout_constraintEnd_toEndOf="@id/vCenterLine"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:fontFamily="@font/pretendard_bold"
        android:includeFontPadding="false"
        android:gravity="start"
        tools:text="App Version(1.0.0)" />
    <include
        android:id="@+id/clSystemDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        layout="@layout/item_system_info"
        app:layout_constraintBottom_toTopOf="@id/clMacAddress"
        app:layout_constraintEnd_toEndOf="@id/vCenterLine"
        app:layout_constraintStart_toStartOf="parent"
        />
    <include
        android:id="@+id/clMacAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        layout="@layout/item_system_info"
        app:layout_constraintBottom_toTopOf="@id/clNetworkInfo"
        app:layout_constraintEnd_toEndOf="@id/vCenterLine"
        app:layout_constraintStart_toStartOf="parent"
        />
    <include
        android:id="@+id/clNetworkInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="100dp"
        layout="@layout/item_system_info"
        app:layout_constraintBottom_toTopOf="@id/btSetting"
        app:layout_constraintEnd_toEndOf="@id/vCenterLine"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/setting"
        android:textSize="30sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintBottom_toTopOf="@id/btReboot"
        app:layout_constraintEnd_toEndOf="@id/vCenterLine"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btReboot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/reboot"
        android:textSize="30sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintBottom_toTopOf="@id/btShutdown"
        app:layout_constraintEnd_toEndOf="@id/vCenterLine"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btShutdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/program_shutdown"
        android:textSize="30sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vCenterLine"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>