<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_2383C6">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="220dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMainLayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/glBottom"
        app:layout_constraintStart_toStartOf="parent">
        <SurfaceView
            android:id="@+id/sfVideo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Right Layer : 최근응대 및 대기인수 표출 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRightLayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="22dp"
        app:layout_constraintStart_toEndOf="@id/clMainLayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/glBottom">

        <TextView
            android:id="@+id/tvRecentCallTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:text="@string/recent_call_title"
            android:textSize="72sp"
            android:textColor="@color/white"
            android:fontFamily="@font/custom_font_pretendard_sb"
            android:includeFontPadding="false"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/recent_call_title"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clRecentCallLayer"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/rectangle_round_white1"
            android:paddingStart="31dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRecentCallTitle">

            <TextView
                android:id="@+id/tvWinNum"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_round_blue2"
                android:textSize="85sp"
                android:textColor="@color/white"
                android:fontFamily="@font/custom_font_pretendard_b"
                android:includeFontPadding="false"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvCallNum"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="3"/>
            <TextView
                android:id="@+id/tvCallNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:textSize="74sp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_font_pretendard_b"
                android:letterSpacing="-0.02"
                android:includeFontPadding="false"
                android:gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@id/tvWinNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="0000"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvWaitNumTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/waiting_people2"
            android:textColor="@color/white"
            android:textSize="72sp"
            android:fontFamily="@font/custom_font_pretendard_sb"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clWaitNum"
            tools:text="@string/waiting_people1"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clWaitNum"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@drawable/rectangle_round_white1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                android:id="@+id/tvWaitNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="130sp"
                android:textColor="@color/black"
                android:fontFamily="@font/jalnangothic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvSuffix"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="00"/>
            <TextView
                android:id="@+id/tvSuffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="75sp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_font_pretendard_sb"
                app:layout_constraintStart_toEndOf="@id/tvWaitNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvWaitNum"
                android:text="@string/suffix_people"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/vBottomBackground"
        android:background="@color/_0070B5"
        android:layout_width="0dp"
        android:layout_height="126dp"
        app:layout_constraintTop_toTopOf="@id/glBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="우리 마음 속 첫 번째 금융"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:fontFamily="@font/custom_font_woori"
        app:layout_constraintTop_toTopOf="@id/vBottomBackground"
        app:layout_constraintBottom_toBottomOf="@id/vBottomBackground"
        app:layout_constraintStart_toEndOf="@id/ivWooriImage"
        app:layout_constraintEnd_toStartOf="@id/ivWooriIcon"
        />
    <ImageView
        android:id="@+id/ivWooriImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:background="@drawable/weebie2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clMainLayer"
        />
    <ImageView
        android:id="@+id/ivWooriIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_white2"
        app:layout_constraintStart_toStartOf="@id/clRightLayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clRightLayer"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
